components/recipes/envs/prod/mealie/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  template:
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.27.0 # {"$imagepolicy": "flux-system:mealie"}
