components/recipes/envs/prod/mealie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
spec:
  ingressClassName: nginx-external
  rules:
    - host: mealie.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mealie
                port:
                  name: mealie
